@@ -16,6 +16,8 @@
         - More stats functions - #vector_standarized_compute, #vector_centered_compute, #sample_with_replacement, #sample_without_replacement
         - #only_valid for creating a Vector with only non-nil data
         - Ported many Statsample::Vector stat methods to Daru::Vector. These are: #percentile, #factors, etc.
+        - Added .new_with_size for creating vectors by specifying a size for the
+        vector and a block for generating values.
     - DataFrame
         - #dup_only_valid
         - #clone
